--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework.boot:spring-boot-starter-actuator")
+
 }
